Окончание вертски внутренней

--- a/inner.html
+++ b/inner.html
@@ -31,6 +31,7 @@
 	<link rel="stylesheet" href="app/bower/normalize-css/normalize.css">
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/inner.css">
 </head>
 <body>
 	<!--[if lt IE 8]>
@@ -38,7 +39,7 @@
 		Пожалуйста<a href="http://browsehappy.com/">обновите</a> его.</p>
 	<![endif]-->
 	<div class="l-wrapper">
-		<header class="b-header clearfix">
+		<header class="b-header b-header_inner clearfix">
 			<div class="l-center">
 				<div class="l-top-header">
 					<div class="b-logo">
@@ -106,55 +107,51 @@
 		</header>
 		<!-- b-header -->
 		<section class="b-services clearfix">
-			<div class="l-center l-gray-border clearfix">
-				<h2 class="b-services__head">Предоставляемые услуги</h2>
-				<div class="b-services_desc">
-					<p>Компания специализируется на оказании широкого спектра услуг как для корпоративных клиентов так и для частных лиц. Профессионализм и ответственность ключевые преимущества нашей компании.</p>
+			<div class="l-center clearfix">
+				<h1 class="b-page-head">О компании</h1>
+				<div class="b-beadcrumbs clearfix">
+					<ul class="b-breadcrumbs__list">
+						<li class="b-breadcrumbs__item"><a href="" class="b-breadcrumbs__link">Главная</a></li>
+						<li class="b-breadcrumbs__item"><a href="" class="b-breadcrumbs__link">Главная</a></li>
+						<li class="b-breadcrumbs__item"><a href="" class="b-breadcrumbs__link">Главная</a></li>
+						<li class="b-breadcrumbs__item">Внутренняя</li>
+					</ul>
 				</div>
-				<ul class="b-services__list">
-					<li class="b-services__item b-services__item_3">
-						<img src="pic/services/img1.jpg" alt="services" class="b-services__img">
-						<a href="/" class="b-services__link">Строительство зданий</a>
-						<div class="b-services__item-desc">
-							<p>Осуществляется от имени и в интересах лиц, участвующих в деле: сторон, третьих лиц, заявителей и иных заинтересованных лиц.</p>
-						</div>
-					</li>
-					<li class="b-services__item b-services__item_3">
-						<img src="pic/services/img2.png" alt="services" class="b-services__img">
-						<a href="/" class="b-services__link">Ремонт оборудования</a>
-						<div class="b-services__item-desc">
-							<p>Частичная или полная передача работ по поддержке, обслуживанию и модернизации ИТ-инфраструктуры в руки компаний.</p>
-						</div>
-					</li>
-					<li class="b-services__item b-services__item_3">
-						<img src="pic/services/img3.jpg" alt="services" class="b-services__img">
-						<a href="/" class="b-services__link">Проектирование зданий</a>
-						<div class="b-services__item-desc">
-							<p>Веб-разработчик знает, что впервые его. Значительно различается при оценке качества восприятия макета.</p>
-						</div>
-					</li>
-					<li class="b-services__item b-services__item_3">
-						<img src="pic/services/img4.jpg" alt="services" class="b-services__img">
-						<a href="/" class="b-services__link">Аудит и консалтинг</a>
-						<div class="b-services__item-desc">
-							<p>Все аспекты, связанные с определением, достижением и поддержанием конфиденциальности, целостности информации.</p>
-						</div>
-					</li>
-					<li class="b-services__item b-services__item_3">
-						<img src="pic/services/img5.jpg" alt="services" class="b-services__img">
-						<a href="/" class="b-services__link">Курсы английского</a>
-						<div class="b-services__item-desc">
-							<p>Проверка финансово-экономической деятельности организации, проводимая аудитором.</p>
-						</div>
-					</li>
-					<li class="b-services__item b-services__item_3">
-						<img src="pic/services/img6.jpg" alt="services" class="b-services__img">
-						<a href="/" class="b-services__link">Школа танцев</a>
-						<div class="b-services__item-desc">
-							<p>Выполнение специального аудиторского задания по рассмотрению бухгалтерских и налоговых отчетов экономического субъекта.</p>
-						</div>
-					</li>
-				</ul>
+				<!-- b-beadcrumbs -->
+				<aside class="b-sidebar">
+					<nav class="b-sidebar-menu">
+						<ul class="b-sidebar-menu__list">
+							<li class="b-sidebar-menu__item b-sidebar-menu__item_active"><a href="" class="b-sidebar-menu__link">О компании</a></li>
+							<li class="b-sidebar-menu__item"><a href="" class="b-sidebar-menu__link">История</a></li>
+							<li class="b-sidebar-menu__item b-sidebar-menu__item_active"><a href="" class="b-sidebar-menu__link">Лицензии</a></li>
+							<li class="b-sidebar-menu__item"><a href="" class="b-sidebar-menu__link">Партнеры</a></li>
+							<li class="b-sidebar-menu__item"><a href="" class="b-sidebar-menu__link">Отзывы клиентов</a></li>
+							<li class="b-sidebar-menu__item"><a href="" class="b-sidebar-menu__link">Сотрудники</a></li>
+							<li class="b-sidebar-menu__item"><a href="" class="b-sidebar-menu__link">Вакансии</a></li>
+							<li class="b-sidebar-menu__item"><a href="" class="b-sidebar-menu__link">Реквизиты</a></li>
+						</ul>
+					</nav>
+					<div class="b-sidebar-content">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A officiis laboriosam explicabo ipsam quibusdam impedit molestiae rem eius porro, nostrum quam, cumque dolorum quaerat alias voluptatum odio harum culpa vel.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A officiis laboriosam explicabo ipsam quibusdam impedit molestiae rem eius porro, nostrum quam, cumque dolorum quaerat alias voluptatum odio harum culpa vel.</p>
+					</div>
+				</aside>
+				<!-- b-sidebar -->
+				<main class="b-content">
+					<img src="pic/content/company.jpg" alt="Company" class="b-content__img">
+					<h2 class="b-services__head">О компании</h2>
+					<p>Можно добиться высокого качества сервиса (с точки зрения организации), доведенного до автоматизма (и автоматизированного), но не замечать при этом конкретного клиента. В этом случае приоритетом будут являться стандарты обслуживания, а не впечатления клиента и его лояльность. Главное точность, скорость, производительность, повторяемость. Практически, это характеристики конвейера. Вопрос, вернется ли клиент завтра, решились ли его проблемы, удовлетворен ли он обслуживанием, остаются за кадром процесса «качественного сервиса».</p>
+					<ul>
+						<li>Восприятие сотрудником себя как субъекта, чья профессионально-трудовая деятельность влияет на общую результативность деятельности предприятия и определяет стратегию его развития.</li>
+						<li>Осознанное принятие личной ответственности за общий продукт совместной деятельности организации. Добросовестное отношение к своим производственным обязанностям становится нормой поведения работника. Общественное мнение негативно настроено к проявлениям фиктивной трудовой активности.</li>
+						<li>Ориентация сотрудника на поиск, разработку, выбор и воплощение наиболее оптимальных способов осуществления своей деятельности. У работников формируется ощущение ответственности за качество продукта и порождает заинтересованность в его повышении. Трудовая деятельность любого вида приобретает творческий характер, что создает общую атмосферу увлеченности своей работой.</li>
+						<li>Профессионально-трудовая деятельность позитивно влияет на личностное развитие.</li>
+						<li>Ощущение взаимоадекватности личных и коллективных критериев собственной ценности. Успешность сотрудника в результате становится основанием как для самоуважения, так и для уважения со стороны коллег. Повышается эффективность делового взаимодействия, что является объективным условием установления доброжелательных межличностных отношений в коллективе.</li>
+					</ul>
+					<p>Примером данной ситуации могут служить большие компании, которые стремятся к высокопроизводительным процессам, включая клиентский сервис. И если вчера это было их преимуществом, то сегодня, в связи с ростом требований потребителей к индивидуальному обслуживанию, это скорее конкурентная слабость.</p>
+					<p>В результате подобного клиентского сервиса, клиент вынужден слушать голос автоинформатора: «Спасибо, что позвонили в нашу компанию, все операторы сейчас заняты, вам обязательно ответят в порядке очереди». Опять все в очередь! Неправда ли, мотивация возникает (бросить трубку), удовлетворенность – нет.</p>
+				</main>
+				<!-- b-content -->
 			</div>
 		</section>
 		<!-- b-services -->
