Перед версткой слайдера

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 	<link rel="stylesheet" href="app/bower/normalize-css/normalize.css">
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/slider.css">
 </head>
 <body>
 	<!--[if lt IE 8]>
