Доработки топ слайдера

--- a/index.html
+++ b/index.html
@@ -111,60 +111,66 @@
 		</header>
 		<!-- b-header -->
 		<section class="b-top-slider">
-			<div class="l-center">
-				<ul class="b-top-slider__list">
-					<li class="b-top-slider__item clearfix">
-						<div class="b-top-slider__content">
-							<h3 class="b-top-slider__head">Адаптация под фирменный стиль</h3>
-							<div class="b-top-slider__desc">
-								<p>Неограниченная палитра цветов, универсальные текстуры и библиотека иконок — выбирайте любую гамму без каких-то усилий, просто изменив пару строк</p>
-							</div>
-							<div class="b-top-slider__buttons">
-								<button class="b-big-button">Узнать больше</button>
-								<button class="b-big-button b-big-button_invers">Заказать</button>
-							</div>
-						</div>
-					</li>
-				    <li class="b-top-slider__item clearfix">
-						<div class="b-top-slider__content">
-							<h3 class="b-top-slider__head">Корпоративный сайт для всех</h3>
-							<div class="b-top-slider__desc">
-								<p>Готовое решение для юридических лиц и индивидуальных предпринимателей для быстрого создания сайта.</p>
-							</div>
-							<div class="b-top-slider__buttons">
-								<button class="b-big-button">Узнать больше</button>
-								<button class="b-big-button b-big-button_invers">Заказать</button>
-							</div>
-						</div>
-					</li> 
-					<li class="b-top-slider__item clearfix">
-						<div class="b-top-slider__content">
-							<h3 class="b-top-slider__head">Корпоративный сайт для всех</h3>
-							<div class="b-top-slider__desc">
-								<p>Готовое решение для юридических лиц и индивидуальных предпринимателей для быстрого создания сайта.</p>
-							</div>
-							<div class="b-top-slider__buttons">
-								<button class="b-big-button">Узнать больше</button>
-								<button class="b-big-button b-big-button_invers">Заказать</button>
-							</div>
-						</div>
-					</li> 
-					<li class="b-top-slider__item clearfix">
-						<div class="b-top-slider__content">
-							<h3 class="b-top-slider__head">Корпоративный сайт для всех</h3>
-							<div class="b-top-slider__desc">
-								<p>Готовое решение для юридических лиц и индивидуальных предпринимателей для быстрого создания сайта.</p>
-							</div>
-							<div class="b-top-slider__buttons">
-								<button class="b-big-button">Узнать больше</button>
-								<button class="b-big-button b-big-button_invers">Заказать</button>
-							</div>
-						</div>
-					</li> 
-				</ul>
-                <!-- b-top-slider__list-->
-			</div>
-			<!-- l-center-top-slider -->
+            <ul class="b-top-slider__list">
+                <li class="b-top-slider__item b-top-slider__item_1 clearfix">
+                   <div class="l-center">
+                      <div class="b-top-slider__content">
+                            <h3 class="b-top-slider__head">Адаптация под фирменный стиль</h3>
+                            <div class="b-top-slider__desc">
+                                <p>Неограниченная палитра цветов, универсальные текстуры и библиотека иконок — выбирайте любую гамму без каких-то усилий, просто изменив пару строк</p>
+                            </div>
+                            <div class="b-top-slider__buttons">
+                                <button class="b-big-button">Узнать больше</button>
+                                <button class="b-big-button b-big-button_invers">Заказать</button>
+                            </div>
+                        </div> 
+                   </div>
+                </li>
+                <li class="b-top-slider__item b-top-slider__item_2 clearfix">
+                   <div class="l-center">
+                      <div class="b-top-slider__content">
+                            <h3 class="b-top-slider__head">Адаптация под фирменный стиль</h3>
+                            <div class="b-top-slider__desc">
+                                <p>Неограниченная палитра цветов, универсальные текстуры и библиотека иконок — выбирайте любую гамму без каких-то усилий, просто изменив пару строк</p>
+                            </div>
+                            <div class="b-top-slider__buttons">
+                                <button class="b-big-button">Узнать больше</button>
+                                <button class="b-big-button b-big-button_invers">Заказать</button>
+                            </div>
+                        </div> 
+                   </div>
+                </li>
+                <li class="b-top-slider__item b-top-slider__item_3 clearfix">
+                   <div class="l-center">
+                      <div class="b-top-slider__content">
+                            <h3 class="b-top-slider__head">Адаптация под фирменный стиль</h3>
+                            <div class="b-top-slider__desc">
+                                <p>Неограниченная палитра цветов, универсальные текстуры и библиотека иконок — выбирайте любую гамму без каких-то усилий, просто изменив пару строк</p>
+                            </div>
+                            <div class="b-top-slider__buttons">
+                                <button class="b-big-button">Узнать больше</button>
+                                <button class="b-big-button b-big-button_invers">Заказать</button>
+                            </div>
+                        </div> 
+                   </div>
+                </li>
+                <li class="b-top-slider__item b-top-slider__item_4 clearfix">
+                   <div class="l-center">
+                      <div class="b-top-slider__content">
+                            <h3 class="b-top-slider__head">Адаптация под фирменный стиль</h3>
+                            <div class="b-top-slider__desc">
+                                <p>Неограниченная палитра цветов, универсальные текстуры и библиотека иконок — выбирайте любую гамму без каких-то усилий, просто изменив пару строк</p>
+                            </div>
+                            <div class="b-top-slider__buttons">
+                                <button class="b-big-button">Узнать больше</button>
+                                <button class="b-big-button b-big-button_invers">Заказать</button>
+                            </div>
+                        </div> 
+                   </div>
+                </li>
+                
+            </ul>
+            <!-- b-top-slider__list-->
 		</section>
 		<!-- b-top-slider -->
 		<section class="b-features clearfix">
