--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 	<link rel="stylesheet" href="js/slick/slick.css">
 	<link rel="stylesheet" href="js/slick/slick-theme.css">
 <!--	end slider -->
+<!--menu-->
+    <link rel="stylesheet" href="js/slickMenu/slicknav.css">
+<!--end menu-->
 </head>
 <body>
 	<!--[if lt IE 8]>
@@ -77,9 +80,9 @@
 					<nav class="b-top-menu">
 						<ul class="b-top-menu__list">
 							<li class="b-top-menu__item"><a href="/" class="b-top-menu__link">Компания</a></li>
-							<li class="b-top-menu__item"><a href="/" class="b-top-menu__link">Каталог</a>
+							<li class="b-top-menu__item">Каталог
 								<ul class="b-sub-top-menu__list">
-									<li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link">Категория1</a>
+									<li class="b-sub-top-menu__item">Категория1
 										<ul class="b-sub-top-menu__list_child">
 											<li class="b-sub-top-menu__item_child"><a href="" class="b-sub-top-menu__link_child">Товар1</a></li>
 											<li class="b-sub-top-menu__item_child"><a href="" class="b-sub-top-menu__link_child">Товар2</a></li>
@@ -525,6 +528,7 @@
 <script>window.jQuery || document.write('<script src="app/bower/jquery/jquery.js"><\/script>')
 </script>
 <script src="js/slick/slick.js"></script>
+<script src="js/slickMenu/jquery.slicknav.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
