Начало модуля валидации ФОС contact.html

--- a/contact.html
+++ b/contact.html
@@ -206,7 +206,7 @@
 						<div class="l-form__right">
 							<label class="l-form__label">
 								Сообщение: *
-								<textarea name="message" cols="30" rows="10"></textarea>
+								<textarea name="message" cols="30" rows="10" class="b-form__textarea"></textarea>
 								<i class="b-form__marker b-form__marker_message"></i>
 							</label>
 						</div>
