Правильная верстка топ меню и работающий скрипт

--- a/index.html
+++ b/index.html
@@ -84,15 +84,23 @@
 								<ul class="b-sub-top-menu__list">
                                     <li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link">Категория1</a>
 										<ul class="b-sub-top-menu__list_child">
-											<li class="b-sub-top-menu__item_child"><a href="" class="b-sub-top-menu__link_child">Товар1</a></li>
-											<li class="b-sub-top-menu__item_child"><a href="" class="b-sub-top-menu__link_child">Товар2</a></li>
-											<li class="b-sub-top-menu__item_child"><a href="" class="b-sub-top-menu__link_child">Товар3</a></li>
-											<li class="b-sub-top-menu__item_child"><a href="" class="b-sub-top-menu__link_child">Товар4</a></li>
+											<li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link_child">Товар1</a></li>
+											<li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link_child">Товар2</a></li>
+											<li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link_child">Товар3</a></li>
+											<li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link_child">Товар4</a></li>
 										</ul>
 									</li>
 									<li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link">Категория2</a></li>
 									<li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link">Категория3</a></li>
-									<li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link">Категория4</a></li>
+									<li class="b-sub-top-menu__item">
+									    <a href="" class="b-sub-top-menu__link">Категория4</a>
+                                        <ul class="b-sub-top-menu__list_child">
+											<li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link_child">Товар1</a></li>
+											<li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link_child">Товар2</a></li>
+											<li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link_child">Товар3</a></li>
+											<li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link_child">Товар4</a></li>
+										</ul>
+				                    </li>
 								</ul>
 							</li>
 							<li class="b-top-menu__item">
@@ -100,10 +108,12 @@
 							    <ul class="b-sub-top-menu__list">
                                     <li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link">Категория1</a>
 										<ul class="b-sub-top-menu__list_child">
-											<li class="b-sub-top-menu__item_child"><a href="" class="b-sub-top-menu__link_child">Товар1</a></li>
-											<li class="b-sub-top-menu__item_child"><a href="" class="b-sub-top-menu__link_child">Товар2</a></li>
-											<li class="b-sub-top-menu__item_child"><a href="" class="b-sub-top-menu__link_child">Товар3</a></li>
-											<li class="b-sub-top-menu__item_child"><a href="" class="b-sub-top-menu__link_child">Товар4</a></li>
+											<li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link_child">Товар1</a></li>
+											<li class="b-sub-top-menu__item">
+											    <a href="" class="b-sub-top-menu__link_child">Товар2</a>
+											 </li>
+											<li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link_child">Товар3</a></li>
+											<li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link_child">Товар4</a></li>
 										</ul>
 									</li>
 									<li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link">Категория2</a></li>
